# depp

./: .hgignore  CHANGELOG.md  Main.hs  README  README.md  README.txt  fourmolu.yaml  hilbert-encodings.cabal
src/: Output.hs  Polynomial.hs
src/HilbertEncoding/: Coefficients.hs  Degrees.hs  Functions.hs  Utils.hs
src/Polynomial/: Parse.hs  Pretty.hs  Type.hs
src/Rewriting/: Pretty.hs
