cabal-version:      2.4
name:               hilbert-encodings
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Fabian Mitterwallner
maintainer:         fabian.mitterwallner@uibk.ac.at

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Polynomial
                    , Polynomial.Type
                    , Polynomial.Parse
                    , Polynomial.Pretty
                    , HilbertEncoding.Functions
                    , HilbertEncoding.Coefficients
                    , HilbertEncoding.Degrees
                    , HilbertEncoding.Utils
                    , Rewriting.Pretty

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
                    , text
                    , prettyprinter ^>=1.7.1
                    , term-rewriting
    hs-source-dirs:   src
    default-language: Haskell2010

executable hilbert-encodings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , hilbert-encodings
                    , text

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010

test-suite hilbert-encodings-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
